--- a/TasbihCounter/TasbihCounter/Base.lproj/Main.storyboard
+++ b/TasbihCounter/TasbihCounter/Base.lproj/Main.storyboard
@@ -17,24 +17,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tasbih" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sse-t3-RHn" userLabel="Title_Lable">
-                                <rect key="frame" x="107" y="114" width="200" height="48"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tasbih" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sse-t3-RHn" userLabel="Title_Lable">
+                                <rect key="frame" x="151.5" y="133" width="111" height="48"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                 <color key="textColor" systemColor="systemBrownColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UnZ-ds-Dbu" userLabel="Display_Label">
-                                <rect key="frame" x="57" y="225" width="300" height="156.5"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UnZ-ds-Dbu" userLabel="Display_Label">
+                                <rect key="frame" x="150" y="33.5" width="114" height="156.5"/>
                                 <color key="tintColor" name="AccentColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="131"/>
                                 <color key="textColor" systemColor="systemBrownColor"/>
                                 <color key="highlightedColor" name="AccentColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aXJ-xx-fwJ" userLabel="Discount_Button">
-                                <rect key="frame" x="57" y="421" width="120" height="116"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aXJ-xx-fwJ" userLabel="Discount_Button">
+                                <rect key="frame" x="59.5" y="457" width="100" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="6lN-Sd-gqZ"/>
+                                    <constraint firstAttribute="width" constant="100" id="xR3-Gq-3dR"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="arrow.counterclockwise.circle" catalog="system">
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="38"/>
@@ -44,9 +45,12 @@
                                     <action selector="discountPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2F5-5P-7Wx"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vkB-GO-CC6" userLabel="Count_Button">
-                                <rect key="frame" x="107" y="630" width="200" height="140"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vkB-GO-CC6" userLabel="Count_Button">
+                                <rect key="frame" x="107" y="620" width="200" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="LM0-Wc-mz5"/>
+                                    <constraint firstAttribute="height" constant="150" id="jlk-nW-NZL"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="plus.circle" catalog="system">
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="38"/>
@@ -56,9 +60,12 @@
                                     <action selector="counterPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UAa-oA-fs0"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5gg-Xu-uDa" userLabel="Reset_Button">
-                                <rect key="frame" x="242" y="421" width="115" height="120"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5gg-Xu-uDa" userLabel="Reset_Button">
+                                <rect key="frame" x="254" y="250" width="100" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="G9n-fS-0vk"/>
+                                    <constraint firstAttribute="width" constant="100" id="TSO-E1-4Nk"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="arrow.triangle.2.circlepath.circle" catalog="system" title="">
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="38"/>
@@ -71,6 +78,23 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="5gg-Xu-uDa" firstAttribute="leading" secondItem="aXJ-xx-fwJ" secondAttribute="trailing" constant="94.5" id="4cG-9p-eiY"/>
+                            <constraint firstItem="sse-t3-RHn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9ie-nA-eDX"/>
+                            <constraint firstItem="aXJ-xx-fwJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="59.5" id="Bme-v3-mTH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="UnZ-ds-Dbu" secondAttribute="trailing" constant="150" id="Bnz-hb-H28"/>
+                            <constraint firstItem="vkB-GO-CC6" firstAttribute="top" secondItem="aXJ-xx-fwJ" secondAttribute="bottom" constant="93" id="Ihm-Xg-eBU"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5gg-Xu-uDa" secondAttribute="trailing" constant="60" id="Ksp-IU-Nd3"/>
+                            <constraint firstItem="sse-t3-RHn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="89" id="LEj-8c-eGC"/>
+                            <constraint firstItem="5gg-Xu-uDa" firstAttribute="leading" secondItem="aXJ-xx-fwJ" secondAttribute="trailing" constant="94.5" id="Qca-U2-cQn"/>
+                            <constraint firstItem="UnZ-ds-Dbu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="150" id="Ura-nA-nZK"/>
+                            <constraint firstItem="vkB-GO-CC6" firstAttribute="top" secondItem="5gg-Xu-uDa" secondAttribute="bottom" constant="89" id="bs5-ZC-a8O"/>
+                            <constraint firstItem="vkB-GO-CC6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="107" id="dM9-ln-LHX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vkB-GO-CC6" secondAttribute="trailing" constant="107" id="ew1-9P-zmC"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="vkB-GO-CC6" secondAttribute="bottom" constant="92" id="kSp-0l-JIm"/>
+                            <constraint firstItem="5gg-Xu-uDa" firstAttribute="top" secondItem="UnZ-ds-Dbu" secondAttribute="bottom" constant="60" id="ltu-cW-EGQ"/>
+                            <constraint firstItem="vkB-GO-CC6" firstAttribute="top" secondItem="5gg-Xu-uDa" secondAttribute="bottom" constant="300" id="y7I-Wd-jZH"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="displayLabel" destination="UnZ-ds-Dbu" id="Nhi-dw-uU8"/>
